[package]
name = "forseti_ruleset_terraform"
version = "0.1.0"
edition = "2021"
description = "Terraform ruleset for Forseti linter - provides Terraform-specific linting rules"

[[bin]]
name = "forseti_ruleset_terraform"
path = "src/main.rs"

[dependencies]
forseti_sdk = "*"
anyhow = "1.0"
serde_json = "1.0"
regex = "1.0"
hcl-rs = "0.18"
