[package]
name = "forseti_ruleset_terraform"
description = "Terraform ruleset for Forseti linter - provides Terraform-specific linting rules"
repository = "https://github.com/forseti-linter/forseti-ruleset-terraform/"
authors = ["Marc Seiler <digitalfiz@proton.me>"]
version = "0.1.1"
edition = "2024"
license-file = "LICENSE"


[[bin]]
name = "forseti_ruleset_terraform"
path = "src/main.rs"

[dependencies]
forseti_sdk = "*"
anyhow = "1.0"
serde_json = "1.0"
regex = "1.0"
hcl-rs = "0.18"
